Bug 568135 IME composition string is committed unexpectedly on Gmail when editor flag was changed by some commands r=smaug